# mosaic

./: housekeeping.txt
cpp/rule_of_6/: header_buffer_rule_6.hpp  ut_buffer_lib_rule_6.cpp
cpp/virt_base_class/: CMakeLists.txt  virt_base_class.cpp
message_class/: CMakeLists.txt  message_class.cpp  message_class.h  test_message_class.cpp  test_message_class.h  unit_test_message.cpp
message_class/1_basic_message/: message_class.cpp  message_class.hpp  test_message_class.cpp  test_message_class.h  unit_test_message.cpp
message_class/2_message_class_structure_refined/: CMakeLists.txt  message_class.cpp  message_class.hpp  message_header_class.cpp  message_header_class.hpp  text_message_class.cpp  text_message_class.hpp  time_class.hpp  time_sync_message_class.cpp  time_sync_message_class.hpp  unit_test_time_sync_message.cpp
message_class/3_message_class_with_type_class/: CMakeLists.txt  message_class.cpp  message_class.hpp  message_header_class.cpp  message_header_class.hpp  message_type_enum_class.hpp  text_message_class.cpp  time_sync_message_class.cpp
message_class/4_message_class_restructure_with_buffers/: CMakeLists.txt  header_buffer.cpp  header_buffer.hpp  message_class.cpp  message_class.hpp  ut_header_buffer.cpp  ut_message_class.cpp
message_class/5_message_class_virtual/: CMakeLists.txt  header_buffer.cpp  header_buffer.hpp  message_class.cpp  message_class.hpp  message_type_enum_class.hpp  ut_buffer_lib.cpp  ut_message_lib.cpp
network/: send_files.sh
network/0_tcp_ip_basic_lib_message_exchange/: CMakeLists.txt  network__client_test.cpp  network__server_test.cpp  tcp_client_class.cpp  tcp_client_class.h  tcp_lib.cpp  tcp_lib.h  tcp_server_class.cpp  tcp_server_class.h
network/1_tcp_ip_basic_lib_message_exchange/: CMakeLists.txt  Z_README.txt  network__client_test.cpp  network__server_test.cpp  tcp_client_class.cpp  tcp_client_class.h  tcp_lib.cpp  tcp_lib.h  tcp_server_class.cpp  tcp_server_class.h
network/2_tcp_ip_basic_message_class/: CMakeLists.txt  message_class.cpp  message_class.h  network__client_test.cpp  network__server_test.cpp  tcp_client_class.cpp  tcp_client_class.h  tcp_lib.cpp  tcp_lib.h  tcp_server_class.cpp
network/3_tcp_ip_basic_header_data_message/: message_class.cpp  network__client_test.cpp  network__server_test.cpp  tcp_client_class.cpp  tcp_server_class.cpp  tcp_server_class.h
network/4_tcp_ip_basic_high_level_protocol/: message_class.h  network__client_test.cpp  network__server_test.cpp  tcp_client_class.cpp  tcp_lib.cpp  tcp_lib.h  tcp_server_class.cpp
network/Z_tcp_ip_basic_async_message_exchange/: CMakeLists.txt  network__client_test.cpp  network__server_test.cpp  tcp_client_class.cpp  tcp_client_class.h  tcp_lib.cpp  tcp_lib.h  tcp_server_class.cpp  tcp_server_class.h
opencv/create_mat/: CMakeLists.txt  create_mat.cpp
opencv/test_camera/: CMakeLists.txt  test_camera.cpp
threads/: 0_threads.cpp  1_concurrent_access.cpp  2_concurrent_access_class_mutex.cpp  3_concurrent_access_queue.cpp  4_concurrent_access_spmc.cpp  5_queue_spsc_cond_vars.cpp  6_queue_spmc_cond_vars.cpp  7_queue_mpmc_cond_vars.cpp  7_queue_mpmc_cond_vars_old_1.cpp  7_queue_mpmc_cond_vars_old_2_working_but_santizier_warnings.cpp  8_queue_mpmc_cond_vars.cpp  9_cond_vars_example.cpp  9_cond_vars_example_1.cpp  9_cond_vars_example_2.cpp  9_cond_vars_example_3.cpp  CMakeLists.txt  cpp_condition_variables.odt
